--- a/run.config
+++ b/run.config
@@ -1,11 +1,10 @@
 #种群规模
 population_size=50
 #运行次数
-run_times=3
+run_times=30
 #data_01
-max_nfe=1000
-max_iter_bpso=20
-max_iter_ga=20
-max_iter_ibpso=20
-max_iter_ampso=20
-max_iter_bde=10
+#max_nfe=1000
+#max_iter=20
+#data_02
+max_nfe=5000
+max_iter=100
