--- a/run.config
+++ b/run.config
@@ -1,10 +1,13 @@
 #种群规模
 population_size=50
 #运行次数
-run_times=30
+run_times=3
 #data_01
-#max_nfe=1000
-#max_iter=20
+max_nfe=1000
+max_iter=20
 #data_02
-max_nfe=5000
-max_iter=100
+#max_nfe=5000
+#max_iter=100
+#data_03
+#max_nfe=20000
+#max_iter=400
