dev branch - the source code of SIAP

--- a/run.config
+++ b/run.config
@@ -1,20 +1,16 @@
 #种群规模
-population_size=10
+population_size=50
 #运行次数
-run_times=3
+run_times=5
 #data_01
-#max_nfe=1000
-#max_iter_dnspso=8
-#max_iter_de_dnspso=10
-#max_iter_fade=5
-#max_iter_wwo=20
+#max_nfe=5000
+#max_iter=100
 #data_02
-max_nfe=1000
-max_iter_dnspso=50
-max_iter_de_dnspso=100
-max_iter_fade=100
-max_iter_wwo=100
+#max_nfe=20000
+#max_iter=400
 #data_03
-
+#max_nfe=50000
+#max_iter=1000
 #data_04
-
+max_nfe=80000
+max_iter=1600
