--- a/run.config
+++ b/run.config
@@ -1,21 +1,29 @@
 #种群规模
 population_size=50
 #运行次数
-run_times=30
+run_times=10
+max_time=300
 #data_01
+#max_nfe=5000
+#max_iter=100
+#data_02
+#max_nfe=20000
+#max_iter=400
+#data_03
+#max_nfe=50000
+#max_iter=1000
+#data_04
+#max_nfe=80000
+#max_iter=1600
+#data_05
+#max_nfe=100000
+#max_iter=2000
+#data_06
+#max_nfe=50000
+#max_iter=1000
+#data_07
+#max_nfe=50000
+#max_iter=1000
+#data_08
 max_nfe=5000
 max_iter=100
-#data_02
-#max_time=1
-#data_03
-#max_time=5
-#data_04
-#max_time=10
-#data_05
-#max_time=25
-#data_06
-#max_time=90
-#data_07
-max_time=300
-#data_08
-max_time=600
