添加运行时间 重置为data1启动

--- a/run.config
+++ b/run.config
@@ -4,8 +4,9 @@ population_size=50
 run_times=30
 max_time=300
 #data_01
-#max_nfe=5000
-#max_iter=100
+max_nfe=10000
+max_iter=200
+upper_t=120
 #data_02
 #max_nfe=20000
 #max_iter=400
@@ -22,8 +23,8 @@ max_time=300
 #max_nfe=50000
 #max_iter=1000
 #data_07
-max_nfe=250000
-max_iter=5000
+#max_nfe=250000
+#max_iter=5000
 #data_08
 #max_nfe=300000
 #max_iter=6000
