--- a/run.config
+++ b/run.config
@@ -4,21 +4,25 @@ population_size=50
 run_times=30
 max_time=300
 #data_01
-max_nfe=10000
-max_iter=200
-upper_t=120
+#max_nfe=10000
+#max_iter=200
+#upper_t=120
 #data_02
 #max_nfe=20000
 #max_iter=400
+#upper_t=160
 #data_03
 #max_nfe=50000
 #max_iter=1000
+#upper_t=200
 #data_04
-#max_nfe=80000
-#max_iter=1600
-#data_05
 #max_nfe=100000
 #max_iter=2000
+#upper_t=300
+#data_05
+max_nfe=150000
+max_iter=3000
+upper_t=400
 #data_06
 #max_nfe=50000
 #max_iter=1000
